--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{blogger}</title>
+    <title>{blogger  }</title>
     <link rel="stylesheet" href="">
 </head>
 <body>
@@ -11,7 +11,7 @@
 
     <div id="sidebar">
         <h2>Blogger</h2>
-        <p>A blogger clone</p>
+        <p>A Blogger clone</p>
     </div>
 </body>
 </html>
