--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -10,3 +10,6 @@
           {{ post.title }}
       </a>  
     </h2>
+    <p class="date">
+        Published {{ post.publish }} by {{ post.author }}
+    </p>
