ending post body

--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -13,3 +13,4 @@
     <p class="date">
         Published {{ post.publish }} by {{ post.author }}
     </p>
+    {{post.body|truncatewords:30|linebreaks}}
