--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static "css/blog.css" %}">
 </head>
 <body>
-    <div>
+    <div id = "content">
         {% block content %}
         {% endblock %}
     </div>
